# mindpulse

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: release.yaml
config/: claude.yaml  codex.yaml
doc/: claude_code_hooks_setup.md
doc/logo/: generate_logo.py  logo_preview.html
src/: CMakeLists.txt  main.cpp  mindpulse.rc
src/core/: CMakeLists.txt  breath_engine.cpp  breath_engine.h  config_manager.cpp  config_manager.h  icon_renderer.cpp  icon_renderer.h  yaml_parser.h
src/core/include/: config_manager.h  icon_renderer.h  state_machine.h  yaml_parser.h
src/core/src/: breath_engine.cpp  config_manager.cpp  icon_renderer.cpp  state_machine.cpp
src/server/: CMakeLists.txt
src/server/include/: server.h
src/server/src/: server.cpp
src/ui/: CMakeLists.txt  tray_win.cpp  tray_win.h
src/ui/include/: tray.h  tray_win.h
src/ui/src/: tray_stub.cpp  tray_win.cpp
tests/: CMakeLists.txt  test_breath_engine_test.cpp  test_config_manager.cpp  test_icon_renderer_test.cpp  test_main.cpp  test_server.cpp  test_state_machine.cpp  test_tray_integration.cpp
