# set(CORE_SOURCES
#     breath_engine.cpp
#     icon_renderer.cpp
# )

# add_executable(mindpulse_tests
#     ${CORE_SOURCES}
# )

# target_include_directories(mindpulse_tests PRIVATE
#     ${CMAKE_SOURCE_DIR}/src
# )

# target_link_libraries(mindpulse_tests PRIVATE
#     gtest
#     gtest_main
# )
